base-2/apps/backend/lh-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployadmin
  labels:
    app: deployadmin
spec:
  revisionHistoryLimit: 3
  #replicas: 2
  selector:
    matchLabels:
      app: deployadmin
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: deployadmin
    spec:
      containers:
      - name: admin
        image: image_url/admin-stage
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 512m
          requests:
            cpu: 300m
