base-2/apps/backend/lh-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceadmin
spec:
  selector:
    app: deployadmin
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31310
