base-2/apps/backend/lh-admin/ingress-argo-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresspracticeargo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: certificate_arn
    #alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ingress
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

    alb.ingress.kubernetes.io/target-node-labels: Name=nodegroup
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/success-codes: '200,307'
    alb.ingress.kubernetes.io/conditions.argocd-server: >
      [{"field":"source-ip","sourceIpConfig":{"values":["65.2.88.212/32"]}}]
spec:
  rules:
    - host:
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: argocd-server
              port:
                number: 8080
